--- a/visualization/top-exports.html
+++ b/visualization/top-exports.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home</title>
+		<title>Export Trends of Top Principle Commodities</title>
 	</head>
 	<header class="ccsticky-nav">
 
